added some content

--- a/Talk5/Seminar-Arbeit.tex
+++ b/Talk5/Seminar-Arbeit.tex
@@ -60,87 +60,119 @@ The \textbf{3rd generation DFS}, namely \textit{peer-to-peer systems} in general
 	\end{figure}
 
 \subsection{Peer-to-Peer}
-In this section a deeper understanding of the main ideas and goals of Peer-to-Peer systems will be given. Tough it is not possible to go very deep in this topic, the idea is to give an overview and a basis for the related work in following sections. First of all a very detailed definition of what Peer-to-Peer systems can be described as is given:
+In this section a deeper understanding of the main ideas and goals of Peer-to-Peer systems will be given. Tough it is not possible to go very deep in this topic, the idea is to give an overview and a basis for the related work in following sections. First of all a very detailed definition of what Peer-to-Peer systems can be described as is given. Later it is explained what type of peering scheme exist and in the end a summary of the well known assets and drawbacks of peer-to-peer systems compared to traditional cloud storage is done.
 \begin{quote}
 A distributed network architecture may be called a Peer-to-Peer (P-to-P, P2P,...) network, if the participants share a part of their own hardware resources (processing power, storage capacity, network link capacity, printers,...). These shared resources are necessary to provide the Service and content offered by the network (e.g. file sharing or shared workspaces for collaboration). They are accessible by other peers directly, without passing intermediary entities. The participants of such a network are thus resource (Service and content) providers as well as resource (Service and content) requestors (Servent-concept)\cite{ptp:definition}.
 \end{quote}
 Apparently the concept behind P2P systems is to move away from the traditional client-server architecture to get as far away from their withdrawals as possible. Instead of having one machine acting as a server only answering requests by clients when these clients send those requests, in P2P, the roles of the client and server are combined into one machine (hereforth called peer). Peers then can form a network of peers, i.e., a peer-to-peer network.
 
-There are some well-known advantages and disadvantages in peer-to-peer systems. As for traditional distributed file storage the server can become the single point of failure and RAID networks are expensive and sophisticated to maintain whereas peer-to-peer networks do not have to deal with all of these problems. P2P systems naturally are scalable and excellent in fault tolerance what needs to be archived heavy-going for centralized systems. Nonetheless peer-to-peer systems are quite difficult to manage and good security is hard to archive but having these concerns controlled by a single instance like it is for centralized systems, it is easy to obtain.
+There are some well-known advantages and disadvantages in peer-to-peer systems. As for traditional distributed file storage the server can become the single point of failure and RAID networks are expensive and sophisticated to maintain whereas peer-to-peer networks do not have to deal with all of these problems. P2P systems naturally are scalable and excellent in fault tolerance what needs to be archived heavy-going for centralized systems. Nonetheless peer-to-peer systems are quite difficult to manage and good security is hard to archive but having these concerns controlled by a single instance like it is for centralized systems, it is easy to obtain \cite{tomp2p:p2p_introduction}.
 
-Maybe some pictures
-
-Generally four different types of P2P networks are classified: (give examples)
+Generally four different types of P2P networks are classified. Mostly it is not possible to clearly associate a known system to one of these four basic approaches because most systems on the market do not provide such a clear structure or use multiple approaches. Nonetheless usually one approach sticks out \cite{ptp-introduction:tomptp}.
 \begin{enumerate}
-	\item \textbf{Centralized P2P} which show similarities to the classical client-server model where peers in fact communicate directly with each other but with the help of a central server. (Napster, central peer serves as directory)
-	\item \textbf{Hybrid P2P} provide 'super peers' to find other peers and resources. Peers communicate to these super peers until the resource is found and thus the peers can communicate directly. (Skype)
-	\item \textbf{Pure P2P}, also known as \textit{unstructured P2P} systems are systems where where all peers are equally powerful communicating without any server or super peer, so peers communicate directly and act as relays to find resources. (BitTorrent)
-	\item \textbf{Structured P2P} are similar to pure P2P but however the peers are organized in a specific structure, e.g. a tree to enhance peer and resource detection \cite{ptp-introduction:tomptp}. (Explain DHT)
+	\item \textbf{Centralized P2P} as indicated in figure \ref{centralized_p2p} which shows similarities to the classical client-server model where peers in fact communicate directly with each other but with the help of a central server. A good known service as an example for centralized P2P is Napster which uses central peer serves as directories. AeroFS, one of the systems later in detail discussed uses a similar approach too.
+	\begin{figure}[H]
+		\begin{center}
+		\includegraphics[scale=0.2]{Talk5/centralized_p2p.PNG}
+		\end{center}
+		\caption{Centralized peer-to-peer}
+		\label{centralized_p2p}
+	\end{figure}
+	\item \textbf{Hybrid P2P} provides so called \textit{super peers} to find other peers and resources. Peers communicate to these super peers until the resource is found and thus the peers can communicate directly. This paper does not cover any detailed discussion of a hybrid system but a well known service is for example Sykpe. Figure \ref{hybrid_p2p} illustrates a hybrid approach:
+	\begin{figure}[H]
+		\begin{center}
+		\includegraphics[scale=0.2]{Talk5/hybrid_p2p.PNG}
+		\end{center}
+		\caption{Hybrid peer-to-peer}
+		\label{hybrid_p2p}
+	\end{figure}
+	\item \textbf{Pure P2P} systems, also known as \textit{unstructured P2P} systems are systems where all peers are equally powerful communicating without any server or super peer, so peers communicate directly and act as relays to find demanded resources. BitTorrentSync and Storj, both systems that will be discussed in detail in a moment are systems which use a pure P2P approach as shown in figute \ref{pure_p2p}:
+	\begin{figure}[H]
+		\begin{center}
+		\includegraphics[scale=0.2]{Talk5/pure_p2p.PNG}
+		\end{center}
+		\caption{Pure (unstructured) peer-to-peer}
+		\label{pure_p2p}
+	\end{figure}
+	\item \textbf{Structured P2P} as shown in figure \ref{structured_p2p} are similar to pure P2P however the peers are organized in a specific structure, e.g. a tree, often a DHT which is used to enhance peer and resource detection. A DHT is just like a normal hash table where hashes of the keys are stored and these keys indicate on which peer the requested files are. Each peer is responsible for a specific key range and henceforth is called \textit{distributed hash table}.
+	\begin{figure}[H]
+		\begin{center}
+		\includegraphics[scale=0.2]{Talk5/structured_p2p.PNG}
+		\end{center}
+		\caption{Structured peer-to-peer}
+		\label{structured_p2p}
+	\end{figure}
 \end{enumerate}
 
 Peer-to-peer networks often lack of having enough peers continuously connected to the network. Where peers are defined as some volunteers helping for important files enable fast transfer speed.
 
 \subsection{Problems of Common Sync and Sharing Services}
-(Change formulation, include reference http://hive2hive.com/)Although many well-known synchronization and sharing services exist, most of them exhibit the following drawbacks:
+File synchronization has do address and deal with several problems. Depending on the type of file storage and synchronization that is used, some problems might be easy to address and some are even impossible to fully cover. In traditional file storage for example the main problem is the server itself which becomes a bottleneck and is vulnerable to targeted attacks e.g. DDOS. Private data on these large, external data centers is often not encrypted or if it is, the keys are stored on the same server too as will be shown later in the example of Dropbox. Users do not have control over who can access their private data and he or she is bound to the respective pricing and terms of the service. Such systems often lack of version control and conflict management \cite{hive2hive}.
 
-    centralized client-server approaches, data resides in large, external data centers
-    single-point-of-failure, vulnerable to targeted attacks
-    often not scalable
-    private data is not encrypted
-    user control is revoked, no control over who has access to the private data
-    user is bound to the respective pricing and terms of service
-    no version control, no conflict management
+Depending on the peering scheme used: e.g. manageability gets more complicated as it is for pure P2P and availability is downscaled in centralized P2P where the server again becomes a bottleneck. But for all peering schemes trust is a big talking point. As it is proven to successfully undermine powerful and well secured servers it is just a logic implication that for peers, which represent normal household computational devices, manipulation must be much simpler.
 
 \section{Approach} % @Simon
 \label{sec:approach}
-This section describes the criteria we chose to classify the different file storage systems. The criteria were chosen to fit what we feel are the most important aspect that a prospective user considers before making the decision of which file storage system to use. The following criteria were chosen for classification and a justification for each choice is given.
+In the first place our reasons and a justification for the chosen systems is provided. 
+In addition the criteria we chose to classify the different file storage systems are listed and stated below. As we decided to compare only few systems but dig as well as in any way possible into these systems we have considered listing as many relevant criteria as we could find.
+
+\subsection{Justification of the chosen systems}
+During research discovering so many peer-to-peer systems a selection of a few of them was inevitable. The criteria among that was chosen for evaluation where:
+\begin{itemize}
+\item \textbf{Availability and maturity}: \textit{Is the system currently available and are the concepts developed and implemented and not only ideas?}\\
+
+\item \textbf{Academic or commercial release}: \textit{Was or is the system being developed for academical and research purposes or is the main approach commercial?}\\
+We wanted to have a good mixture of academical and commercial systems.
+
+\item \textbf{Importance in future}: \textit{Does the system show skills which indicate that it might play an important role in future?}\\
+Admitting this criteria is difficult to guess it is important to chose a system that does not shut down in the foreseeable future.
+\end{itemize}
 
 \subsection{Criteria}
+The decision of criteria was made to fit what we feel are the most important aspects that a prospective user considers before making the decision of which file storage system to use. The following criteria were chosen for classification and a justification for each choice is given.
+
 \begin{itemize}
-\item Peering Scheme: How are peers connected, where is user data stored, how do users communicate and what messages do they exchange?
+\item \textbf{Peering Scheme}: \textit{How are peers connected, where is user data stored, how do users communicate and what messages do they exchange?}\\
 This classification criteria describes the technical aspects of the peer-to-peer system. As described in Section 2 (include refrence) there are many different forms of peering schemes for peer-to-peer networks. It also may be important for users to know how and where their data is physically stored in the network. Some users may be weary of storing their personal data on the machine of a stranger, even if the data is divided into chunks and encrypted. This aspect also deals with how peers can share data with each other and which communication possibilities exist. 
 
-\item Encryption: Are the communication between peers and the files stored encrypted and with which algorithm?
+\item \textbf{Encryption}: \textit{Are the communication between peers and the files stored encrypted and with which algorithm?}\\
 
-\item Trust and Integrity: How is trust established between peers? How are files and communication protected against fraudulent users and attacks?
+\item \textbf{Trust and Integrity}: \textit{How is trust established between peers? How are files and communication protected against fraudulent users and attacks?}\\
 
-\item Payment Scheme: Is the system free or paid? Who gets paid what under which circumstances?
+\item \textbf{Payment Scheme}: \textit{Is the system free or paid? Who gets paid what under which circumstances?}\\
 Of course, a user is more likely to use a system the cheaper it is. However, there is also the possibility for users to earn money, e.g., by offering up their excess storage space.
 
-\item Fairness: How is the workload distributed in the system especially considering the heterogeneous hardware used by the peers?
+\item \textbf{Fairness}: \textit{How is the workload distributed in the system especially considering the heterogeneous hardware used by the peers?}\\
 
-\item Fault-tolerance and Availability: How does the system guarantee that files are available to the users at all time?
+\item \textbf{Fault-tolerance and Availability}: \textit{How does the system guarantee that files are available to the users at all time?}\\
 
-\item Type of Distribution: Is the system only a library or a dedicated software client?
+\item \textbf{Type of Distribution}: \textit{Is the system only a library or a dedicated software client?}\\
 This aspect determines the ease of use of the system, but also if a expert user can build his or her own application on top of the provided system.
 
-\item Source code availability: Is the system open-source or closed source?
+\item \textbf{Source code availability}: \textit{Is the system open-source or closed source?}\\
 This aspect is most relevant to application developers but might also be of interest for conventional users. If a system is open source, an application developers can make changes to the program code and may also contribute to future releases of the system. However, this can also be detrimental. Programmers may be able to change certain parts of their application which in turn may bypass security and fairness concepts normally applied in the system. For example, it might be possible for a malicious programmer to disable storage of data from other users while he or she stores large amounts of data of their own on other peers. In a different, more extreme example, a malicious programmer can commit changes to the public source code that contains backdoors to the encryption algorithms, allowing the programmer to access files which he or she is not normally authorized to access. The feasibility of this example depends on how many people are involved with the development of the open source project and how skilled the owners of the code are at detecting such malicious changes.
 Closed source code can also be disadvantageous. If the source code is not accessible, users have to trust the developer that the security algorithms are properly implemented and that their data is only accessible to authorized parties. With open source code, an adept user can at all times verify the quality of the security scheme. Also, the more developers that are actively working on the open source project and verifying commits, the smaller is the possibility of malicious code sneaking in.
 
-\item User base: How many users does the system currently have? Is the system intended for businesses or private users?
+\item \textbf{User base}: \textit{How many users does the system currently have? Is the system intended for businesses or private users?}\\
 Firstly, the amount of users already using the system may be an indication of the quality of the system to prospective users. Also, there exists the network effect which may make it more useful for users to use a system which is already widely established instead of one which is only used by few people. Additionally, an open source system with many active users and developers may be more secure than ones with a smaller install base. However, a larger user base also makes the system a more desirable target of attack for malicious users. Secondly, the feature set of a system can also be geared more towards business applications instead of private users. It is usually more prudent to choose a system that is more suitable to the goals of the user.
 
-\item Status: In what state is the system? Is it available for use, a scientific prototype or canceled?
+\item \textbf{Status}: \textit{In what state is the system? Is it available for use, a scientific prototype or canceled?}
 \end{itemize}
-
 \section{Comparisons}
-In this section, we classify and compare four exemplary P2P file storage systems according to the classification criteria given in the preceding section. We also compare the P2P file storage to a popular distributed file storage system to find similarities and differences. At the end, we give a summary of the findings and highlight those findings in a table comparing thefile storage systems with each other.
+In this section, we classify and compare four exemplary P2P file storage systems according to the classification criteria given in the preceding section. We also compare the P2P file storage to a popular distributed file storage system to find similarities and differences. At the end, we give a summary of the findings and highlight those findings in a table comparing the file storage systems with each other.
 
 \subsection{Storj} % @Josua
-One can describe Storj (pronounced storage) as a completely decentralized and blockchain-based peer-to-peer cloud storage system with it's major concern on security and efficiency. Further it includes a peer-to-peer payment system service like Bitcoin \cite{storj:blog:what_is_storj}. Storj mainly consists of two applications, namely DriveShare (also called Driveminer)
-and Metadisk. The former is uses unused harddrive space of users and the latter is a web-service used for file sharing.
+One can describe Storj (pronounced storage) as a completely decentralized and blockchain-based peer-to-peer cloud storage system with it's major concern on security and efficiency and was primary launched in July 2014. Further it includes a peer-to-peer payment system service similar to Bitcoin \cite{storj:blog:what_is_storj}. Storj mainly consists of two applications, namely DriveShare (also called Driveminer) and Metadisk. The former is uses unused harddrive space of users and the latter is a web-service used for file sharing. The main approach of Storj is that the average user has a lot of unused harddrive space and for many systems a user pays for a specific amount of space even if he or she doesn't use it at all. Storj claims a user is only obligated to pay for his used space and thus will be much cheaper than any other available cloud storage.
 
-% not 100% sure about that part ..
-\textbf{Peering scheme:} There are no centralized servers but information of where other shards of a specific file are located is needed. So Storj uses a hybrid approach.
+\textbf{Peering scheme:} There are no centralized servers but information of where other shards of a specific file are located is stored in the Storj blockchain. As peer discovery is done by an advertisement system whose functionality is not explained in precision \cite{storj:PDF}. Storj remains as unstructered peer-to-peer system.
 
-\textbf{Encryption:} Before encryption and distribution files are splitted into shards. These shards, a multiple of 8 or 32 Bit, are being added a deterministic salt, then uniquely encrypted and distributed over the network via a hash. A farmer does not get a whole copy (which means in this case all necessary shards of a file) but the shards are distributed to multiple farmers. For enhanced security for sensitive or important data it is also possible to combine shards, e.g. with garbage data or other client's data  \cite{storj:PDF}.
+\textbf{Encryption:} Before encryption and distribution files are splitted into shards. These shards, a multiple of 8 or 32 Bit, are being added a deterministic salt, then uniquely encrypted and distributed over the network. A farmer does not get a whole copy (which means in this case all necessary shards of a file) but the shards are distributed to multiple farmers. Per default there are at least three redundant copies of a shard all the time available. For enhanced security for sensitive or important data it is also possible to combine shards, e.g. with garbage data or other client's data. The prof of redundancy claims if a node goes offline a copy of all it's shards is made and the shards moved to another node. In addition a user can chose how and with what his files will be encrypted  \cite{storj:PDF}.
 
-\textbf{Trust and Integrity} With the help of a pseudo-reputation system like advertisements in peer discovery to get data quality and type by tracking it or directly from the network evaluations are made to detect and qualify reputable peers. Storj uses a recommendation system for peers to improve the algorithm \cite{storj:PDF}.
+\textbf{Trust and Integrity} With the help of a pseudo-reputation system like advertisements in peer discovery to get data quality and type by tracking it or directly from the network, evaluations are made to detect and qualify reputable peers. Storj uses a recommendation system for peers to improve the algorithm \cite{storj:PDF}.
 
-The proof of storage and merkle audits, also audits through hash challenge ensure whether a farmer is able to proof he holds a specific file, or more precise; a specific shard and that the shard has not been changed or malicious modified by anything.
+The proof of storage and merkle audits, also audits through hash challenge ensure whether a farmer is able to proof he holds a specific file, or more precise; a specific shard and that the shard has not been changed or malicious modified by anyone or anything.
 
-Storj uses different so called heartbeats to check whether a file is correctly shattered and stored. Shards are split into pieces and checked for fulfillment of the security requirements and modification detection. 
+Storj uses different so called heartbeats to check whether a file is correctly shattered and stored. Shards are furthermore split into pieces and checked for fulfillment of the security requirements and modification detection through heartbeats as shown in figure \ref{storj_heartbeat}. A full heartbeat means the whole shard integrity is checked but this is shown to be very I/O inefficient whereas cycle heatbeats need \textsl{n} heartbeats to generate a full heartbeat. Deterministically generate reads on a shard using a root seed is the third variant for those audits, but Storj uses a mixed methodology to improve efficiency.
 
 	\begin{figure}[ht]
 		\begin{center}
@@ -158,17 +190,19 @@ But what happens if a malicious farmer knows the decryption key of a specific fi
 
 \textbf{Fault-tolerance and Availability:} To default there are thee copies of a shard all times accessible which means a shard gets copied to another node if a node goes offline. The user can request more copies in exchange of money. In this way, if a node fails an audit or is unreachable, the network replication process is initiated and thus the network is able to 'heal' itself.
 
-To archive accordance of file location ad integrity over the whole network a block-chain like for Bitcoin according to Satoshi Nakamoto \cite{bitcoin} is used:
+To archive accordance of file location and integrity over the whole network a blockchain like Bitcoin according to Satoshi Nakamoto \cite{bitcoin} is used. No file is stored in blockchain but rather file hashes of their metadata to determine file location.
 
-\begin{quotation}To use a basic analogy, it is easy to steal a cookie from a cookie jar in a secluded area, but it is hard to do so when the jar is instead located in the middle of a public square, being observed by thousands of people \cite{storj:PDF}.\end{quotation}
+\begin{quotation}
+To use a basic analogy, it is easy to steal a cookie from a cookie jar in a secluded area, but it is hard to do so when the jar is instead located in the middle of a public square, being observed by thousands of people \cite{storj:PDF}.
+\end{quotation}
 
-\textbf{Type of distribution:} As mentioned above, Storj consists of two applications; DriveShare and Metadisk.
+\textbf{Type of distribution:} As mentioned above Storj consists of two applications; DriveShare and Metadisk.
 
 \textbf{Source code availability:} Both applications (and even more Storj applications) are fully open-source \cite{storj:github}.
 
-\textbf{User base:} There are no official up-to-date data, in addition the system is currently in beta-phase. The forum of Storj has over one thousand members \cite{storj:forum} and lets assume that there are currently even more storj users. In June 2014 Storj had about more than 3'000 users \cite{storj:crowdsale}.
+\textbf{User base:} There is no official up-to-date data, in addition the system is currently in beta-phase. The forum of Storj has over one thousand members \cite{storj:forum} and lets assume that there are currently even more storj users. In June 2014 Storj had about more than 3'000 users \cite{storj:crowdsale}.
 
-\textbf{Status:} Storj is currently in beta phase and already available for use. There are three different test groups; A, B and C each with different conditions (rewarding system, requirements, starting date) \cite {storj:earlyaccess}
+\textbf{Status:} Storj is currently in beta phase and already available for use. There are three different test groups; A, B and C each with different conditions in terms of a rewarding system, requirements and the starting date \cite {storj:earlyaccess}
 
 \subsection{Hive2Hive} % @Simon 
 Hive2Hive (formerly known as Box2Box) is an open source peer-to-peer file sharing and synchronization library that started out as part of a course challenge task project and was further improved in a graduate student's project at the Communication Systems Group at the University of Zurich. (https://github.com/Hive2Hive/Hive2Hive/wiki/About-Us) It is built on top of the TomP2P library (an open source Distributed Hash Table (DHT) based key-value store) which was also developed at the Communication Systems Group. (http://tomp2p.net/)
@@ -229,39 +263,43 @@ BitTorrent Sync is currently closed source.
 \textbf{Status}
 
 \subsection{AeroFS} % @Josua
-AeroFS is a dedicated software client from Air Computing providing basic peer to peer solutions but some advanced functionality concerning advanced security and encryption, error and data loss prevention and everything for low costs \cite{aerofs}.
+AeroFS is a dedicated software client from Air Computing providing basic peer to peer solutions but some advanced functionality concerning advanced security and encryption, error and data loss prevention and Air Computing claims providing everything for low costs. AeroFS is mainly targeted towards business users and companies who need a secure file backup and synchronization service \cite{aerofs}.
 
-\textbf{Peering scheme:} There are basically two different peering schemes, one without Air servers, where data can be exchanged within the local area network for enhanced up-link time in comparison to internet up-links \cite{aerofs:peering_scheme} and a centralized solution with the AeroFS Team Server to back up files on a central location \cite{aerofs:peering_scheme_2}. Thus Air Computing uses a hybrid solution as a peering scheme.
+\textbf{Peering scheme:} AeroFS uses a centralized solution as peering scheme but let's the user chose how this is managed. Air Computing provides two different cloud options and an additional addon, the Team Server:
 
-\textbf{Encryption:} An end-to-end encryption solution is provided, files are encrypted before transaction using AES-256 with 2048-bit RSA and only the recipient is able to decrypt the data transfer \cite{aerofs:security}. On the servers of AeroFS are only usernames, the hashes of the passwords and the names of the access authorized users from folders stored \cite{aerofs:security_2}.
-
-\textbf{Trust and Integrity} The amount of users from a borrower is of fixed size (but can grow), also using the AeroFS Applicance as root certificate, no other footprint will be accepted by the clients \cite{aerofs:security}.
-
-\textbf{Payment scheme:} The basic pricing plan (Team) is free up to a user-base size of 30 \cite{aerofs:blog:30_users_free} and the business plan starts above 31 users and according to the size of the user-base the billing is done; e.g. for 40 users and the cost totals in \$600, the biggest available size on the website is 1000 users for \$15'000 per month \cite{aerofs:pricing}.
-
-\textbf{Fairness:} Three different cloud options:
 \begin{enumerate}
-\item \textbf{Private Cloud}: Provides private Web Administration, manage registration and authentication of users and private Certificate Authority (CA) to manage the AeroFS public key infrastructure (PKI) for client applications
+\item \textbf{Private Cloud}: Provides private Web Administration, the AeroFS Appliance which is a lightweight virtual machine to manage registration and authentication of users and private Certificate Authority (CA) to manage the AeroFS public key infrastructure (PKI) for client applications.
 \item \textbf{Hybrid Cloud}: Supply a centrally managed file sharing platform for the employees and registration, authentication and user management is done outside the network by AeroFS.
-\item \textbf{Team Server} (optional Addon): Light weight client to enable backup of files and 24/7 availability \cite{aerofs:cloud_types}.
+\item \textbf{Team Server} (optional Addon): Light weight client to enable backup of files and 24/7 availability \cite{aerofs:cloud_types}. But the Team Server again has three different options:
+	\begin{enumerate}
+	\item \textbf{Linked Storage}: Creates a read/write copy of organization's files on the Team Server. Files will still be browseable.
+	\item \textbf{Block Storage}: Compresses and de-duplicates files for enlarged disk space. Files won't be browseable anymore.
+	\item \textbf{S3 Storage}: Data shared by users of an organization is stored and backed up on Amazon servers compressed and de-duplicated. Files won't be browseable anymore \cite{aerofs:storage_types}.
+	\end{enumerate}
 \end{enumerate}
-If a hard-drive gets too full, the versioning systems keeps track of the oldest copies and deletes them if the user runs out of space \cite{aerofs:USTO.RE}.
-%%https://www.aerofs.com/developers/ --> load balancer
 
-\textbf{Fault-tolerance and Availability:} 
-% research needed
+\textbf{Encryption:} An end-to-end encryption solution is provided, files are encrypted before transaction using AES-256 with 2048-bit RSA and only the recipient is able to decrypt the data transfer \cite{aerofs:security}. The files for syncing iteslf are eventually stored unencrypted. On the servers of AeroFS are only usernames, the hashes of the passwords and the names of the access authorized users from folders stored \cite{aerofs:security_2}.
 
-\textbf{Type of distribution:} AeroFS serves a software client for users and a admin dash panel for enhanced manageability.
-
-\textbf{Source code availability:} AeroFS is currently closed source.
-There are three different types of storage for the AeroFS Team Server:
+\textbf{Trust and Integrity} The amount of users from a borrower is of fixed size (but can grow), also using the AeroFS Applicance as root certificate, no other footprint will be accepted by the clients \cite{aerofs:security}. AeroFS provides three different access permission:
 \begin{enumerate}
-\item \textbf{Linked Storage}: creates a read/write copy of organization's files on the team server. Files will be browseable.
-\item \textbf{Block Storage}: compresses and de-duplicates files for enlarged disk space. Files won't be browseable.
-\item \textbf{S3 Storage}: Data shared by users of an organization is stored and backed up on Amazon servers compressed and de-duplicated. Files won't be browseable \cite{aerofs:storage_types}.
+\item Owners (poject administrators): Can add and remove members to the shared folder.
+\item Editors: Can create and modify content.
+\item Viewers: Can only red content.
 \end{enumerate}
+A user can manage AeroFS  public key infrastructure (PKI) with his AeroFS Appliance as the root certificate authority (CA). The clients are configured to trust only this AeroFS Appliance which limits the trust footprint. AeroFS also provides an option to remove and wipe data on stolen devices.
 
-\textbf{User base:} According to the webpage \cite{aerofs} there are currently \textbf{50'000+} users.
+\textbf{Payment scheme:} The basic pricing plan (Team) is free up to a user-base size of 30 \cite{aerofs:blog:30_users_free} and the business plan starts above 31 users and according to the size of the user-base the billing is done; a user costs \$15, so e.g. for 40 users and the cost totals in \$600, the biggest available size on the website is 1000 users for \$15'000 per month \cite{aerofs:pricing}.
+
+\textbf{Fault-tolerance and Availability:} Multiple users can work on the same file and conflicts are resolved by the users itself by comparing the changes and thus resolve the conflicts. But the AeroFS Appliance and the AeroFS Servers act as single point of failure and no user will be able to register and authenticate anymore.
+
+\textbf{Fairness:} AeroFS introduces a load balancer for the AeroFS Appliance which acts as a single API endpoint and securely forwards API requests to running Team Servers and desktop clients. This load balancer thus tries to distribute the workload evenly by maintaining the balance between service availability and data consistency.
+If a hard-drive gets too full, the versioning systems of the AeroFS Team Server keeps track of the oldest copies and deletes them if the user runs out of space \cite{aerofs:USTO.RE}.
+
+\textbf{Type of distribution:} AeroFS serves a software client and the AeroFS Appliance for users and a admin dash panel for enhanced manageability.
+
+\textbf{Source code availability:} AeroFS is currently closed source but there are some interresting open-source projects on the AeroFS github page.
+
+\textbf{User base:} According to the webpage \cite{aerofs} there are currently around \textbf{50'000+} users.
 
 \textbf{Status:} Available for use and costs-free.
 
@@ -293,7 +331,8 @@ Closed source
 
 \textbf{Status}
 
-\section{Summary and Conclusions} In this section, we provide a summary about the topics mentioned above and draw conclusions about the current state of the available P2P file storage systems and what the future could hold for P2P file storage.
+\section{Summary and Conclusions}
+In this section, we provide a summary about the topics mentioned above and draw conclusions about the current state of the available P2P file storage systems and what the future could hold for P2P file storage.
 
 \begin{thebibliography}{99}
 	\bibitem {aerofs}
@@ -451,5 +490,10 @@ Closed source
 		\emph{A Definition of Peer-to-Peer Networking for the Classification of Peer-to- Peer Architectures and Applications;}
 		\url{http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=990434&tag=1},
 		April, 2015.
+		
+	\bibitem {tomp2p:p2p_introduction}
+		\emph{TomP2P, a P2P-based key-value pair storage library}
+		\url{http://tomp2p.net/doc/p2p/}
+		April, 2015
 
 \end{thebibliography}
